# studs

./: .gitignore  README.md
crossplatformprogramming/1/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  kontr_1.py  kontr_2.py  kontr_3.py  kontr_4.py  kontr_5.py  kontr_6.py  kontr_7.py  kontr_8.py  kontr_9.py
crossplatformprogramming/2/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  kontr_1.py  kontr_10.py  kontr_11.py  kontr_12.py  kontr_13.py  kontr_14.py  kontr_15.py  kontr_2.py  kontr_3.py  kontr_4.py  kontr_5.py  kontr_6.py  kontr_7.py  kontr_8.py  kontr_9.py
crossplatformprogramming/3/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  ind1.py  ind2.py  ind3.py  ind4.py  ind5.py  Лаба3_крос.docx
crossplatformprogramming/4/: .~lock.Лаба4_крос.docx#  1.py  10.py  11.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  ind1.py  ind2.py  Лаба4_крос.docx
crossplatformprogramming/5/: .~lock.Лаба5_крос.docx#  1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  besi2.txt  detskiysad.txt  file2.txt  ind1.py  (+17 more)
mathstat/: 7_11.py  7_12.py  7_13.py  7_14.py  7_15.py  7_16.py  7_17.py  7_18.py  7_19.py
programming/: 20.03.drawio  ex.md  ex.txt  main.cpp  result_table_index.cpp  search_for_index.cpp  test.cpp
programming/5lab/: CMakeLists.txt
programming/5lab/include/: DB.h  DLL1.h  DLL2.h
programming/5lab/src/: main.cpp
programming/5lab/src/dynamic_lib1/: DLL1.cpp
programming/5lab/src/dynamic_lib2/: DLL2.cpp
programming/5lab/src/static_lib/: DB.cpp
(+119 files in other folders)
